# mergen

./: .coverage  .gitattributes  .gitignore  .gitleaks.toml  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MERGEN.md  MERGEN_PRINCIPLES.md  NOTICE  PROVENANCE.md  README.md  SECURITY.md  SUPPORT.md  index.html  install.ps1  install.sh  mergen_cli.py  mergen_supervise.py  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  gitleaks.yml
core/: CONVENTIONS.md  lazy-ladder.md
core/adapters/: agents.json  native.json  speckit.json
core/commands/: agent.md  analyze.md  checklist.md  debt.md  go.md  govern.md  implement.md  lean.md  plan.md  rollup.md  specify.md  verify.md
core/hooks/: constitution_inject.py  verify_agent_hook.py  verify_gate.py
core/schemas/: adapter-manifest.schema.json  governor-decision.schema.json  milestone-decision.schema.json  policy-pack.schema.json  tasks-dag.schema.json  tasks-state.schema.json  verification-report.schema.json
core/scripts/: feature_ops.py
core/scripts/bash/: check-prerequisites.sh  create-new-feature.sh  setup-plan.sh  setup-tasks.sh
core/scripts/powershell/: check-prerequisites.ps1  create-new-feature.ps1  setup-plan.ps1  setup-tasks.ps1
core/templates/: checklist-template.md  plan-template.md  project-state-template.md  tasks-template.md  verification-template.md
docs/: .publication-marker  CAPABILITIES.md  COMPAT.md  GITHUB-ABOUT.md  GITHUB-SETTINGS-APPLIED.md  GITHUB-SETTINGS.md  HOW-IT-WORKS.md  LIVE-CHAIN-EVAL.md  MILESTONE-SUPERVISOR.md  MNEME-SEAM.md  PACKAGING.md  PUBLISHING.md  README.md  RELEASE-NOTES-2026-07-16.md  RELEASE-NOTES.md  ROADMAP-V2_5.md  ROADMAP.md  SDD-SUPERSET.md  mergen-config.example.toml
domains/clinical/: pack.toml
domains/security/: pack.toml
effort-mode/: install.ps1  install.sh
effort-mode/commands/: mergen.md
effort-mode/hooks/: mergen_prompt_hook.py
effort-mode/scripts/: patch_settings.py
eval/: README.md  benchmark.py  evalops.py  evidence_metric.py  live_chain_eval.py  methodology.md  run_eval.sh
eval/ci/: README.md  evalops.yml  govern-gate.yml  pr-guardian.yml  verify-attest.yml  verify-gate-live.yml  verify-gate.yml
eval/corpus/: 01_real_file_and_passing_test.json  02_real_file_only_no_test.json  03_real_multi_file_all_present.json  04_phantom_missing_file.json  05_phantom_one_of_three_missing.json  06_phantom_failing_test.json  07_phantom_zero_evidence.json  08_phantom_gitignored_file.json
eval/sample/: verification-report.json
examples/verify-demo/: README.md  tasks-state.json
examples/verify-demo/src/: greeter.py
examples/verify-demo/tests/: test_greeter.py
scripts/: adapter_sdk.py  check_no_reference_text.py  check_sync.py  dashboard.py  governor_adaptive.py  governor_floor.py  impacted.py  injection_quarantine.py  ledger.py  mneme_emit.py  pack_validate.py  pr_guardian.py  preaction_sign.py  project_config.py  replay.py  spec_verify.py  tasks_dag_validator.py  tasks_status.py  tasks_to_issues.py  trends.py  trust_dashboard.py  trust_graph.py  validate_version.py  verify_core.py  verify_report_lint.py
tests/: conftest.py  test_adapter_sdk.py  test_benchmark.py  test_build_native_hooks_dir.py  test_command_contract.py  test_dashboard.py  test_evalops.py  test_evidence_metric.py  test_examples.py  test_feature_ops.py  test_floor_report_lint_chain.py  test_governor_adaptive.py  test_governor_floor.py  test_hook.py  test_impacted.py  test_injection_quarantine.py  test_ledger.py  test_live_chain_eval.py  test_mergen_cli.py  test_mergen_supervise.py  test_mergen_v1.py  test_milestone_contracts.py  test_mneme_emit.py  test_no_reference_text.py  test_pack_validate.py  test_patch_settings.py  test_patch_settings_hooks.py  test_pr_guardian.py  test_preaction_sign.py  test_project_config.py  test_renders.py  test_replay.py  test_schemas.py  test_sdd_hooks.py  test_spec_verify.py  test_tasks_dag_validator.py  test_tasks_status.py  test_tasks_to_issues.py  test_trends.py  test_trust_dashboard.py  (+6 more)
