[project]
name = "mergen"
version = "2.0.0"
description = "The execution backbone for AI coding agents: a wise Governor and a precise verify gate."
requires-python = ">=3.9"
# License declared in package metadata, not only in the LICENSE/NOTICE files, so a
# built artifact (and any future PyPI page) carries it. SPDX expression per PEP 639.
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Onour Impram" }]
keywords = [
  "ai-agents",
  "spec-driven-development",
  "verification",
  "governance",
  "claude-code",
  "sdd",
  "adversarial-verification",
  "deterministic",
]
# Classifiers declared explicitly so PyPI metadata reports the supported Python
# versions and the project's scope. The list mirrors the CI matrix (3.9, 3.11,
# 3.12, 3.13). No "License ::" classifier here on purpose: under PEP 639 the SPDX
# `license` expression above is authoritative, and setuptools >= 77 errors if a
# License classifier is also present (it is superseded by the expression).
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

# Installing this project exposes the `mergen` command. The supported path is an
# editable/clone install (`pip install -e .` or `pipx install -e .`), because
# mergen renders the SDD skills from this repo's core/ tree and the command must
# be able to find it. A standalone wheel that bundles core/ as package data is
# on the roadmap.
[project.scripts]
mergen = "mergen_cli:main"

# Dev tooling, declared once here (PEP 735) so the versions CI installs are
# pinned and visible rather than floating on a bare `pip install pytest`. The
# runtime ships zero third-party dependencies (Tier 0 is pure standard library),
# so these are dev-only. jsonschema validates the schema if/then invariants in
# the test suite. The shipped linter enforces the same rules without it.
[dependency-groups]
dev = [
    "pytest>=8,<9",
    "ruff>=0.15.18,<1",
    "mypy>=1.11,<2",
    "coverage>=7,<8",
    "pytest-cov>=7.1.0,<8",
    "jsonschema>=4.25.1,<5",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mergen_cli"]

[tool.ruff]
# Lint is explicit here, not left to ruff's shifting defaults, so a future ruff
# release cannot move the gate under us. line-length 120 is the width the code
# already wraps to. The selected families (E/W pycodestyle, F pyflakes) are the
# correctness-and-style core; a stricter set (I, B, UP, C4, SIM) is a deliberate
# future step taken under its own review, not folded in silently here.
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
# Strict type checking across mergen's Python surface. The bash and PowerShell
# shims and the test suite stay out of scope; everything that ships and runs is
# in. The gate was widened from the original library-only scope to cover the
# hooks, the speckit and agents renderers, and the eval harness.
strict = true
files = [
    "scripts",
    "mergen_cli.py",
    "core/hooks",
    "dist/native/build_native.py",
    "dist/native/patch_settings_hooks.py",
    "dist/speckit/build_speckit.py",
    "dist/agents/build_agents.py",
    "eval",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Coverage of the Python source surface, everything that ships and runs. The
# renderers and feature_ops are included even where lightly tested, so the number
# is honest rather than narrowed to the well-covered modules.
source = ["scripts", "mergen_cli", "dist", "eval", "core", "effort-mode"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
# Floor set a few points below the measured ~86.8 percent so a normal change does
# not false-fail and so variance across the CI matrix is absorbed. Ratcheted up
# from the original 75 now that the measured number has held above 86 percent.
fail_under = 84
