[project]
name = "mergen"
version = "2.0.0"
description = "Independent milestone verification for agentic and human engineering workflows."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Onour Impram" }]
keywords = [
  "ai-agents",
  "adversarial-verification",
  "ci",
  "governance",
  "milestone-verification",
  "provenance",
  "quality-assurance",
  "spec-driven-development",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Changelog = "https://github.com/OnourImpram/mergen/blob/main/CHANGELOG.md"
Documentation = "https://github.com/OnourImpram/mergen#readme"
Homepage = "https://github.com/OnourImpram/mergen"
Issues = "https://github.com/OnourImpram/mergen/issues"
Source = "https://github.com/OnourImpram/mergen"

[project.scripts]
mergen = "mergen_cli:main"
mergen-supervise = "mergen_supervise:main"

[dependency-groups]
dev = [
  "coverage>=7,<8",
  "jsonschema>=4.25.1,<5",
  "mypy>=1.11,<2",
  "pytest>=9.1.1,<10",
  "pytest-cov>=7.1.0,<8",
  "ruff>=0.15.18,<1",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mergen_cli", "mergen_supervise"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.mypy]
strict = true
files = [
  "scripts",
  "mergen_cli.py",
  "mergen_supervise.py",
  "core/hooks",
  "dist/native/build_native.py",
  "dist/native/patch_settings_hooks.py",
  "dist/speckit/build_speckit.py",
  "dist/agents/build_agents.py",
  "eval",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = [
  "scripts",
  "mergen_cli",
  "mergen_supervise",
  "dist",
  "eval",
  "core",
  "effort-mode",
]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 84
